--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-family: 'Roboto', sans-serif;
 }
 #main {
-    background: url(https://img.cache.vevo.com/thumb/cms/5b70646251a3679a18a6e21b298c3c902017129172756615.jpg)
+    background: url(https://www.solaxpower.com/wp-content/uploads/2016/11/dark-abstract-1920x1080-wallpaper-2.jpg)
 }
 
 #img-pic {
