--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     border: white 2px solid;
     border-radius: 5px;
     font-family: 'Roboto', sans-serif;
+    margin: auto;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 #main {
     background: url(https://www.solaxpower.com/wp-content/uploads/2016/11/dark-abstract-1920x1080-wallpaper-2.jpg)
@@ -33,4 +36,34 @@
     margin-right: 30px;
     border-radius: 5px;
     font-family: 'K2D', sans-serif;
+}
+
+.row {
+    float: left;
+    margin: auto;
+    margin-left: 30px;
+    margin-top: 20px;
+    border: 2px white solid;
+    border-radius: 5px;
+}
+
+.column:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.nftext {
+    margin: auto;
+    margin-left: 30px;
+    margin-top: 20px;
+    border: 2px white solid;
+    border-radius: 5px;
+    margin-right: 30px;
+    color: white;
+    font-family: 'K2D', sans-serif;
+    background-color: black;
+    padding: 5px;
+    height: 475px;
+
 }
