--- a/style.css
+++ b/style.css
@@ -38,32 +38,9 @@
     font-family: 'K2D', sans-serif;
 }
 
-.row {
-    float: left;
-    margin: auto;
-    margin-left: 30px;
-    margin-top: 20px;
-    border: 2px white solid;
-    border-radius: 5px;
-}
-
-.column:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.nftext {
-    margin: auto;
-    margin-left: 30px;
-    margin-top: 20px;
-    border: 2px white solid;
-    border-radius: 5px;
-    margin-right: 30px;
-    color: white;
-    font-family: 'K2D', sans-serif;
-    background-color: black;
-    padding: 5px;
-    height: 475px;
-
+.spotify {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
 }
