--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 #title {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     color: white;
     background-color: black;
     border: white 2px solid;
     border-radius: 5px;
     font-family: 'Roboto', sans-serif;
     margin: auto;
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 50%;
 }
 #main {
-    background: url(https://www.solaxpower.com/wp-content/uploads/2016/11/dark-abstract-1920x1080-wallpaper-2.jpg)
+    background: url(https://www.solaxpower.com/wp-content/uploads/2016/11/dark-abstract-1920x1080-wallpaper-2.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 #img-pic {
@@ -30,17 +30,23 @@
     padding: 20px;
     background-color: black;
     border: 2px white solid;
-    margin: auto;
-    margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 20px 30px auto 30px;
     border-radius: 5px;
     font-family: 'K2D', sans-serif;
 }
 
 .spotify {
     color: #fff;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    opacity: 0.5;
+}
+
+.spotify:hover {
+    opacity: 1;
+}
+
+.spotify:active {
+    text-decoration: underline;
 }
